--- a/Solution1/CarHire.WebUI/Views/Nav/Menu.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Nav/Menu.cshtml
@@ -2,13 +2,14 @@
 
 @if (Session["Category"] == null)
 {
-    @Html.ActionLink("Strona główna", "Index", "Home", null, new { @class = "btn btn-block btn-default btn-lg" })
+    @Html.ActionLink("Strona główna", "Index", "Home", null, new { @class = "btn btn-block btn-primary btn-lg" })
     @Html.ActionLink("Wypożycz", "List", "Car", null, new { @class = "btn btn-block btn-default btn-lg" })
+    @Html.ActionLink("Wypożycz", "BusList", "Car", null, new { @class = "btn btn-block btn-default btn-lg" })
 }
 else if (Session["Category"].Equals("Kierownik"))
 {
     int x = Int32.Parse(Session["LogedUserID"].ToString());
-    @Html.ActionLink("Strona główna", "Index", "Home", null, new { @class = "btn btn-block btn-default btn-lg" })
+    @Html.ActionLink("Strona główna", "Index", "Home", null, new { @class = "btn btn-block btn-primary btn-lg" })
     @Html.ActionLink("Wypożycz", "List", "Car", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Samochody", "Holder", "Car", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Wnioski", "ActionList", "Rental", null, new { @class = "btn btn-block btn-default btn-lg" })
@@ -21,7 +22,7 @@ else if (Session["Category"].Equals("Kierownik"))
 else if (Session["Category"].Equals("Pracownik"))
 {
     int x = Int32.Parse(Session["LogedUserID"].ToString());
-    @Html.ActionLink("Strona główna", "Index", "Home", null, new { @class = "btn btn-block btn-default btn-lg" })
+    @Html.ActionLink("Strona główna", "Index", "Home", null, new { @class = "btn btn-block btn-primary btn-lg" })
     @Html.ActionLink("Wypożycz", "List", "Car", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Wnioski", "ActionList", "Rental", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Oddaj auto", "ReturnList", "Rental", null, new { @class = "btn btn-block btn-default btn-lg" })
@@ -32,7 +33,7 @@ else if (Session["Category"].Equals("Pracownik"))
 else if (Session["Category"].Equals("Klient"))
 {
     int x = Int32.Parse(Session["LogedUserID"].ToString());
-    @Html.ActionLink("Strona główna", "Index", "Home", null, new { @class = "btn btn-block btn-default btn-lg" })
+    @Html.ActionLink("Strona główna", "Index", "Home", null, new { @class = "btn btn-block btn-primary btn-lg" })
     @Html.ActionLink("Wypożycz", "List", "Car", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Wypożyczenia", "Index", "Rental", null, new { @class = "btn btn-block btn-default btn-lg" })
     @Html.ActionLink("Edycja Danych", "Edit", "Users", new { userId = x }, new { @class = "btn btn-block btn-default btn-lg" })
