--- a/Solution1/CarHire.WebUI/Views/Car/BusList.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Car/BusList.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarHire.WebUI.Models.CarsListMainModel
+﻿@model CarHire.WebUI.Models.CarsListViewModel
 
 @{
     ViewBag.Title = "Samochody";
@@ -7,12 +7,12 @@
 @using (Html.BeginForm())
 {
 
-foreach (var p in Model.CarListViewModel.Cars)
+foreach (var p in Model.Cars)
 {
     @Html.Partial("BusSummary", p);
 }
 
 <div class="btn-group pull-right">
-    @Html.PageLinks(Model.CarListViewModel.PagingInfo, x => Url.Action("List", new { page = x }))
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
 </div>
 }
