--- a/Solution1/CarHire.WebUI/Views/Shared/_Layout.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <script src="~/Scripts/jquery-1.9.1.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtsrusive.min.js")" type="text/javascript"></script>
     <title>@ViewBag.Title</title>
     <style>
         .navbar-right{
