--- a/Solution1/CarHire.WebUI/Views/Shared/_Layout.cshtml
+++ b/Solution1/CarHire.WebUI/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
             @Html.ActionLink("Wyloguj", "Logout", "Home", null, new { @class = "pull-right label label-danger" })
         }
         else {
-        @Html.ActionLink("Rejestracja", "SignIn", "Users", null, new { @class = "pull-right label label-info" })
-        @Html.ActionLink("Logowanie", "Login", "Home", null, new { @class = "pull-right label label-success" })
+        @Html.ActionLink("Rejestracja", "SignIn", "Users", null, new { @class = "pull-right btn btn-info btn-ld" })
+        @Html.ActionLink("Logowanie", "Login", "Home", null, new { @class = "pull-right btn btn-success btn-ld" })
         }
     </div>
     <div class="row panel">
